gtest_dep = dependency('gtest', main: 'true', fallback: ['gtest', 'gtest_main_dep'])

test_inc = include_directories('include')

test_builder = executable('test_builder', 'test_builder.cc', include_directories: [test_inc], dependencies: [gtest_dep, parameter_sweep_dep])
test('test_builder', test_builder)
test_factor = executable('test_factor', 'test_factor.cc', include_directories: [test_inc], dependencies: [gtest_dep, parameter_sweep_dep])
test('test_factor', test_factor)
test_tuple_algorithms = executable('test_algorithms', 'test_tuple_algorithms.cc', dependencies: [gtest_dep, parameter_sweep_dep])
test('test_tuple_algorithms', test_tuple_algorithms)
test_helpers = executable('test_helpers', 'test_helpers.cc', include_directories: [test_inc], dependencies: [gtest_dep, parameter_sweep_dep])
test('test_helpers', test_helpers)
test_distributions = executable('test_distributions', 'test_distributions.cc', include_directories: [test_inc], dependencies: [gtest_dep, parameter_sweep_dep])
test('test_distributions', test_distributions)
test_random_order = executable('test_random_order', 'test_random_order.cc', include_directories: [test_inc], dependencies: [gtest_dep, parameter_sweep_dep])
test('test_random_order', test_random_order)
